Завершаем разметку личного проекта

--- a/catalog.html
+++ b/catalog.html
@@ -7,26 +7,26 @@
   <body>
     <header class="main-header">
       <div class="container">
-        <nav class="main-navigation">
+        <nav class="main-navigation" aria-label="Меню сайта">
           <a class="logo">
             <img src="logo" alt="логотип">
           </a>
           <ul class="menu-list">
             <li class="menu-item">
-              <a class="menu-link" href="#"></a>
+              <a class="menu-link" href="#">СТУДИЯ</a>
             </li>
             <li class="menu-item">
-              <a class="menu-link" href="#"></a>
+              <a class="menu-link" href="#">КЛИЕНТЫ</a>
             </li>
             <li class="menu-item">
-              <a class="menu-link" href="catalog.html"></a>
+              <a class="menu-link" href="catalog.html">МАГАЗИН</a>
             </li>
             <li class="menu-item">
-              <a class="menu-link" href="#"></a>
+              <a class="menu-link" href="#">КОНТАКТЫ</a>
             </li>
           </ul>
           <div class="menu-item">
-            <a class="menu-link basket" href="#"></a>
+            <a class="menu-link basket" href="#">КОРЗИНА</a>
           </div>
         </nav>
         <h1 class="caption">Магазин готовых шаблонов</h1>
@@ -89,7 +89,7 @@
                   <label for="basket">Корзина</label>
                 </div>
                 <div class="button">
-                  <button class="link" type="submit">ПОКАЗАТЬ</button>
+                  <button class="link" type="submit" aria-label="Показать результат">ПОКАЗАТЬ</button>
                 </div>
               </div>
             </form>
@@ -108,19 +108,16 @@
               <a class="sorting-link" href="">По названию</a>
             </li>
             <li class="sorting-list">
-              <a class="sorting-link" href=""></a>
+              <a class="sorting-link" href="" aria-label="По возрастанию"></a>
             </li>
             <li class="sorting-list">
-              <a class="sorting-link" href=""></a>
+              <a class="sorting-link" href="" aria-label="По убыванию"></a>
             </li>
           </ul>
           <ul class="services">
             <li>
               <article class="services-item">
                 <div class="points">
-                  <span></span>
-                  <span></span>
-                  <span></span>
                 </div>
                 <div class="picture">
                   <img class="picture-list" src="img/img-sedona.jpg" alt="sedona">
@@ -135,9 +132,6 @@
             <li>
               <article class="services-item">
                 <div class="points">
-                  <span></span>
-                  <span></span>
-                  <span></span>
                 </div>
                 <div class="picture">
                   <img class="picture-list" src="img/img-pink.jpg" alt="pink app">
@@ -152,9 +146,6 @@
             <li>
               <article class="services-item">
                 <div class="points">
-                  <span></span>
-                  <span></span>
-                  <span></span>
                 </div>
                 <div class="picture">
                   <img class="picture-list" src="img/img-barbershop.jpg" alt="barbershop">
@@ -169,9 +160,6 @@
             <li>
               <article class="services-item">
                 <div class="points">
-                  <span></span>
-                  <span></span>
-                  <span></span>
                 </div>
                 <div class="picture">
                   <img class="picture-list" src="img/img-mishka.jpg" alt="mishka">
@@ -186,9 +174,6 @@
             <li>
               <article class="services-item">
                 <div class="points">
-                  <span></span>
-                  <span></span>
-                  <span></span>
                 </div>
                 <div class="picture">
                   <img class="picture-list" src="img/img-aplus.jpg" alt="aplus">
@@ -203,9 +188,6 @@
             <li>
               <article class="services-item">
                 <div class="points">
-                  <span></span>
-                  <span></span>
-                  <span></span>
                 </div>
                 <div class="picture">
                   <img class="picture-list" src="img/img-kvast.jpg" alt="kvast">
@@ -220,10 +202,10 @@
           </ul>
         </div>
         <div class="pages-list">
-          <a class="pages-link" href="">1</a>
-          <a class="pages-link" href="">2</a>
-          <a class="pages-link" href="">3</a>
-          <a class="pages-link" href="">СЛЕДУЮЩАЯ</a>
+          <a class="pages-link" href="" aria-label="Страница номер 1">1</a>
+          <a class="pages-link" href="" aria-label="Страница номер 2">2</a>
+          <a class="pages-link" href="" aria-label="Страница номер 3">3</a>
+          <a class="pages-link" href="" aria-label="Следующая страница">СЛЕДУЮЩАЯ</a>
         </div>
       </div>
       <section class="modal modal-map">
@@ -240,28 +222,31 @@
         <p class="text">Скидка 10% для друзей из социальных сетей.</p>
         <ul class="social-list">
           <li class="social-item">
-            <a class="social social-vk" href="#"></a>
+            <a class="social social-vk" href="#" aria-label="Мы в Вконтакте"></a>
           </li>
           <li class="social-item">
-            <a class="social social-fb" href="#"></a>
+            <a class="social social-fb" href="#" aria-label="Мы на Фейсбуке"></a>
           </li>
           <li class="social-item">
-            <a class="social social-in" href="#"></a>
+            <a class="social social-in" href="#" aria-label="Мы в инстаграм"></a>
           </li>
         </ul>
       </div>
     </footer>
-    <form action="me" method="post">
-      <b class="tagline">Напишите нам</b>
-      <div class="important">
-        <label for="name-field">Ваше имя:</label>
-        <input type="text" name="name" id="name-field" value="Имя Фамилия">
-        <label for="email-field">Ваш e-mail:</label>
-        <input type="text" name="email" id="email-field" value="email@example.com">
-      </div>
-      <label for="message-field">Текст письма:</label>
-      <textarea name="message" id="message-field" placeholder="В свободной форме"></textarea>
-      <button class="link" type="submit">ОТРРАВИТЬ</button>
-    </form>
+    <section class="visually-hidden">
+      <form class="modal-form" action="https://echo.htmlacademy.ru" method="post">
+        <b class="tagline">Напишите нам</b>
+        <div class="important">
+          <label for="name-field">Ваше имя:</label>
+          <input type="text" name="name" id="name-field" placeholder="Имя Фамилия" autofocus>
+          <label for="email-field">Ваш e-mail:</label>
+          <input type="text" name="email" id="email-field" placeholder="email@example.com">
+        </div>
+        <label for="message-field">Текст письма:</label>
+        <textarea name="message" id="message-field" placeholder="В свободной форме"></textarea>
+        <button class="link" type="submit">ОТРРАВИТЬ</button>
+      </form>
+      <button class="modal-close" type="button" aria-label="Закрыть форму">Закрыть</button>
+    </section>
   </body>
 </html>
