Завершаем разметку личного проекта - доработка

--- a/catalog.html
+++ b/catalog.html
@@ -9,24 +9,24 @@
       <div class="container">
         <nav class="main-navigation" aria-label="Меню сайта">
           <a class="logo">
-            <img src="logo" alt="логотип">
+            <img src="img/nerds-logo.svg" alt="логотип">
           </a>
           <ul class="menu-list">
             <li class="menu-item">
-              <a class="menu-link" href="#">СТУДИЯ</a>
+              <a class="menu-link" href="#">Студия</a>
             </li>
             <li class="menu-item">
-              <a class="menu-link" href="#">КЛИЕНТЫ</a>
+              <a class="menu-link" href="#">Клиенты</a>
             </li>
             <li class="menu-item">
-              <a class="menu-link" href="catalog.html">МАГАЗИН</a>
+              <a class="menu-link" href="catalog.html">Магазин</a>
             </li>
             <li class="menu-item">
-              <a class="menu-link" href="#">КОНТАКТЫ</a>
+              <a class="menu-link" href="#">Корзина</a>
             </li>
           </ul>
           <div class="menu-item">
-            <a class="menu-link basket" href="#">КОРЗИНА</a>
+            <a class="menu-link basket" href="#">Корзина</a>
           </div>
         </nav>
         <h1 class="caption">Магазин готовых шаблонов</h1>
@@ -38,7 +38,7 @@
           <div class="main-form">
             <form action="" method="post" oninput="daysoutput.value=dayscount.value">
               <div class="price">
-                <b class="tagline">СТОИМОСТЬ:</b>
+                <b class="tagline">Стоимость:</b>
                 <input type="range" min="0" max="15000" step="1">
               </div>
               <div class="price-list">
@@ -50,7 +50,7 @@
                 </div>
               </div>
               <div class="grid">
-                <b class="tagline">СЕТКА:</b>
+                <b class="tagline">Сетка:</b>
                 <div class="grid-list">
                   <div class="grid-item">
                     <input type="radio" name="grid" id="adaptability">
@@ -67,7 +67,7 @@
                 </div>
               </div>
               <div class="capabilities">
-                <b class="tagline">ОСОБЕННОСТИ:</b>
+                <b class="tagline">Особенности:</b>
                 <div class="capabilities-item">
                   <input type="checkbox" name="slider" id="slider-field" checked>
                   <label for="slider-field">Слайдер</label>
@@ -89,14 +89,14 @@
                   <label for="basket">Корзина</label>
                 </div>
                 <div class="button">
-                  <button class="link" type="submit" aria-label="Показать результат">ПОКАЗАТЬ</button>
+                  <button class="link" type="submit">Показать</button>
                 </div>
               </div>
             </form>
           </div>
         </aside>
         <div class="container-item">
-          <p class="text">СОРТИРОВАТЬ:</p>
+          <p class="text">Сортировать:</p>
           <ul class="sorting">
             <li class="sorting-list">
               <a class="sorting-link" href="">По цене</a>
@@ -202,17 +202,17 @@
           </ul>
         </div>
         <div class="pages-list">
-          <a class="pages-link" href="" aria-label="Страница номер 1">1</a>
-          <a class="pages-link" href="" aria-label="Страница номер 2">2</a>
-          <a class="pages-link" href="" aria-label="Страница номер 3">3</a>
-          <a class="pages-link" href="" aria-label="Следующая страница">СЛЕДУЮЩАЯ</a>
+          <a class="pages-link" href="">1</a>
+          <a class="pages-link" href="">2</a>
+          <a class="pages-link" href="">3</a>
+          <a class="pages-link" href="">Следующая</a>
         </div>
       </div>
       <section class="modal modal-map">
         <div class="footer-contacts">
           <h2 class="head">NЁRDS DESIGN STUDIO</h2>
           <p class="text">191186, Санкт-Петербург, ул. Б. Конюшенная, д. 19/8 тел. +7 (812) 275-75-75</p>
-          <a class="link" href="#">НАПИШИТЕ НАМ</a>
+          <a class="link" href="#">Напишите нам</a>
         </div>
       </section>
     </main>
@@ -244,9 +244,9 @@
         </div>
         <label for="message-field">Текст письма:</label>
         <textarea name="message" id="message-field" placeholder="В свободной форме"></textarea>
-        <button class="link" type="submit">ОТРРАВИТЬ</button>
+        <button class="link" type="submit">Отправить</button>
       </form>
-      <button class="modal-close" type="button" aria-label="Закрыть форму">Закрыть</button>
+      <button class="modal-close" type="button" aria-label="Закрыть форму"></button>
     </section>
   </body>
 </html>
