--- a/index.html
+++ b/index.html
@@ -13,20 +13,20 @@
           </a>
           <ul class="menu-list">
             <li class="menu-item" >
-              <a class="menu-link" href="#">СТУДИЯ</a>
+              <a class="menu-link" href="#">Студия</a>
             </li>
             <li class="menu-item">
-              <a class="menu-link" href="#">КЛИЕНТЫ</a>
+              <a class="menu-link" href="#">Клиенты</a>
             </li>
             <li class="menu-item">
-              <a class="menu-link" href="catalog.html">МАГАЗИН</a>
+              <a class="menu-link" href="catalog.html">Магазин</a>
             </li>
             <li class="menu-item">
-              <a class="menu-link" href="#">КОНТАКТЫ</a>
+              <a class="menu-link" href="#">Контакты</a>
             </li>
           </ul>
           <div class="menu-item">
-            <a class="menu-link basket" href="#">КОРЗИНА</a>
+            <a class="menu-link basket" href="#">Корзина</a>
           </div>
         </nav>
         <div class="slider-list">
@@ -68,17 +68,17 @@
             <li class="features-item">
               <h3 class="head">Веб-сайты</h3>
               <p class="text">Мир никогда не будет прежним после того как увидит ваш сайт!</p>
-              <a class="link" href="#">ЗАКАЗАТЬ</a>
+              <a class="link" href="#">Заказать</a>
             </li>
             <li class="features-item">
               <h3 class="head">Приложения</h3>
               <p class="text">Покорите топ-10 приложений в AppStore и Google Play</p>
-              <a class="link" href="#">ЗАКАЗАТЬ</a>
+              <a class="link" href="#">Заказать</a>
             </li>
             <li class="features-item">
               <h3 class="head">Презентации</h3>
               <p class="text">Вы даже не подозреваете, насколько вы изумительны!</p>
-              <a class="link" href="#">ЗАКАЗАТЬ</a>
+              <a class="link" href="#">Заказать</a>
             </li>
           </ul>
         </section>
@@ -130,7 +130,7 @@
         <div class="footer-contacts">
           <h2 class="head">NЁRDS DESIGN STUDIO</h2>
           <p class="text">191186, Санкт-Петербург, ул. Б. Конюшенная, д. 19/8 тел. +7 (812) 275-75-75</p>
-          <a class="link" href="#" aria-label="Кнопка">НАПИШИТЕ НАМ</a>
+          <a class="link" href="#">Напишите нам</a>
         </div>
       </section>
     </main>
@@ -162,9 +162,9 @@
         </div>
         <label for="message-field">Текст письма:</label>
         <textarea name="message" id="message-field" placeholder="В свободной форме"></textarea>
-        <button class="link" type="submit">ОТРРАВИТЬ</button>
+        <button class="link" type="submit">Отправить</button>
       </form>
-      <button class="modal-close" type="button" aria-label="Закрыть форму">Закрыть</button>
+      <button class="modal-close" type="button" aria-label="Закрыть форму"></button>
     </section>
   </body>
 </html>
