Базовая стилизация личного проекта - доработка

--- a/index.html
+++ b/index.html
@@ -67,17 +67,17 @@
         <section class="features">
           <h2 class="visually-hidden">Услуги</h2>
           <ul class="features-list">
-            <li class="features-item">
+            <li class="features-item features-item-red">
               <h3 class="head">Веб-сайты</h3>
               <p class="text">Мир никогда не будет прежним после того как увидит ваш сайт!</p>
               <a class="link link-list" href="#">Заказать</a>
             </li>
-            <li class="features-item">
+            <li class="features-item features-item-green">
               <h3 class="head">Приложения</h3>
               <p class="text">Покорите топ-10 приложений в AppStore и Google Play</p>
               <a class="link link-green" href="#">Заказать</a>
             </li>
-            <li class="features-item">
+            <li class="features-item features-item-yellow">
               <h3 class="head">Презентации</h3>
               <p class="text">Вы даже не подозреваете, насколько вы изумительны!</p>
               <a class="link link-yellow" href="#">Заказать</a>
