Сетка личного проекта на флексах

--- a/index.html
+++ b/index.html
@@ -43,20 +43,23 @@
             </div>
           </div>
           <ul class="carousel">
-            <li class="carousel-item red">
+            <li class="carousel-item">
               <b class="tagline">Долго, дорого, скорпулезно</b>
               <p class="text">Математически выверенный дизайн для вашего сайта или мобильного приложения.</p>
               <a class="link link-list" href="#">Узнать больше</a>
+              <div class="red"></div>
             </li>
-            <li class="carousel-item green">
+            <li class="carousel-item">
               <b class="tagline">Любим математикукак никто другой</b>
               <p class="text">Никакого креатива, только математические формулы для расчета идеальных пропорций.</p>
               <a class="link link-list" href="#">Узнать больше</a>
+              <div class="green"></div>
             </li>
-            <li class="carousel-item blue">
+            <li class="carousel-item">
               <b class="tagline">Только ночь, только хардкор</b>
               <p class="text">Работать днем, как все? Мы против этого. Ближе к полуночи работа только начинается.</p>
               <a class="link link-list" href="#">Узнать больше</a>
+              <div class="blue"></div>
             </li>
           </ul>
         </div>
@@ -67,17 +70,20 @@
         <section class="features">
           <h2 class="visually-hidden">Услуги</h2>
           <ul class="features-list">
-            <li class="features-item features-item-red">
+            <li class="features-item">
+              <div class="features-item-red"></div>
               <h3 class="head">Веб-сайты</h3>
               <p class="text">Мир никогда не будет прежним после того как увидит ваш сайт!</p>
               <a class="link link-list" href="#">Заказать</a>
             </li>
-            <li class="features-item features-item-green">
+            <li class="features-item">
+              <div class="features-item-green"></div>
               <h3 class="head">Приложения</h3>
               <p class="text">Покорите топ-10 приложений в AppStore и Google Play</p>
               <a class="link link-green" href="#">Заказать</a>
             </li>
-            <li class="features-item features-item-yellow">
+            <li class="features-item">
+              <div class="features-item-yellow"></div>
               <h3 class="head">Презентации</h3>
               <p class="text">Вы даже не подозреваете, насколько вы изумительны!</p>
               <a class="link link-yellow" href="#">Заказать</a>
@@ -133,7 +139,7 @@
       <section class="modal modal-map">
         <div class="modal-contacts">
           <h2 class="head">NЁRDS DESIGN STUDIO</h2>
-          <p class="text">191186, Санкт-Петербург, ул. Б. Конюшенная, д. 19/8 тел. +7 (812) 275-75-75</p>
+          <p class="text">191186, Санкт-Петербург,<br> ул. Б. Конюшенная, д. 19/8<br> тел. +7 (812) 275-75-75</p>
           <a class="link" href="#">Напишите нам</a>
         </div>
       </section>
