--- a/catalog.html
+++ b/catalog.html
@@ -36,172 +36,176 @@
     </header>
     <main class="main-item">
       <div class="container">
-        <aside>
-          <div class="main-form">
-            <form action="" method="post" oninput="daysoutput.value=dayscount.value">
-              <div class="price">
-                <b class="tagline">Стоимость:</b>
-                <input type="range" min="0" max="15000" step="1">
-              </div>
-              <div class="price-list">
-                <div class="price-item">
-                  <output name="daysoutput"></output>
+        <div class="container-cataloge">
+          <aside class="fofm-lateral">
+            <div class="main-form">
+              <form action="" method="post" oninput="daysoutput.value=dayscount.value">
+                <div class="price">
+                  <b class="tagline">Стоимость:</b>
+                  <input type="range" min="0" max="15000" step="1">
                 </div>
-                <div class="price-item">
-                  <output name="daysoutput"></output>
-                </div>
-              </div>
-              <div class="grid">
-                <b class="tagline">Сетка:</b>
-                <div class="grid-list">
-                  <div class="grid-item">
-                    <input type="radio" name="grid" id="adaptability">
-                    <label for="adaptability">Адаптивная</label>
+                <div class="price-list">
+                  <div class="price-item">
+                    <output name="daysoutput"></output>
                   </div>
-                  <div class="grid-item">
-                    <input type="radio" name="grid" id="fixity">
-                    <label for="fixity">Фиксированная</label>
-                  </div>
-                  <div class="grid-item">
-                    <input type="radio" name="grid" id="rubber">
-                    <label for="rubber">Резиновая</label>
+                  <div class="price-item">
+                    <output name="daysoutput"></output>
                   </div>
                 </div>
-              </div>
-              <div class="capabilities">
-                <b class="tagline">Особенности:</b>
-                <div class="capabilities-item">
-                  <input type="checkbox" name="slider" id="slider-field" checked>
-                  <label for="slider-field">Слайдер</label>
+                <div class="grid">
+                  <b class="tagline">Сетка:</b>
+                  <div class="grid-list">
+                    <div class="grid-item">
+                      <input type="radio" name="grid" id="adaptability">
+                      <label for="adaptability">Адаптивная</label>
+                    </div>
+                    <div class="grid-item">
+                      <input type="radio" name="grid" id="fixity">
+                      <label for="fixity">Фиксированная</label>
+                    </div>
+                    <div class="grid-item">
+                      <input type="radio" name="grid" id="rubber">
+                      <label for="rubber">Резиновая</label>
+                    </div>
+                  </div>
                 </div>
-                <div class="capabilities-item">
-                  <input type="checkbox" name="advantages" id="advantages">
-                  <label for="advantages">Блок преимуществ</label>
+                <div class="capabilities">
+                  <b class="tagline">Особенности:</b>
+                  <div class="capabilities-item">
+                    <input type="checkbox" name="slider" id="slider-field" checked>
+                    <label for="slider-field">Слайдер</label>
+                  </div>
+                  <div class="capabilities-item">
+                    <input type="checkbox" name="advantages" id="advantages">
+                    <label for="advantages">Блок преимуществ</label>
+                  </div>
+                  <div class="capabilities-item">
+                    <input type="checkbox" name="news" id="news">
+                    <label for="news">Новости</label>
+                  </div>
+                  <div class="capabilities-item">
+                    <input type="checkbox" name="gallery" id="gallery">
+                    <label for="gallery">Галерея</label>
+                  </div>
+                  <div class="capabilities-item">
+                    <input type="checkbox" name="basket" id="basket">
+                    <label for="basket">Корзина</label>
+                  </div>
+                  <div class="button">
+                    <button class="link link-show" type="submit">Показать</button>
+                  </div>
                 </div>
-                <div class="capabilities-item">
-                  <input type="checkbox" name="news" id="news">
-                  <label for="news">Новости</label>
-                </div>
-                <div class="capabilities-item">
-                  <input type="checkbox" name="gallery" id="gallery">
-                  <label for="gallery">Галерея</label>
-                </div>
-                <div class="capabilities-item">
-                  <input type="checkbox" name="basket" id="basket">
-                  <label for="basket">Корзина</label>
-                </div>
-                <div class="button">
-                  <button class="link link-show" type="submit">Показать</button>
-                </div>
-              </div>
-            </form>
+              </form>
+            </div>
+          </aside>
+          <div class="container-item">
+            <div class="container-item-sorting">
+              <p class="text">Сортировать:</p>
+              <ul class="sorting">
+                <li class="sorting-list">
+                  <a class="sorting-link" href="">По цене</a>
+                </li>
+                <li class="sorting-list">
+                  <a class="sorting-link" href="">По типу</a>
+                </li>
+                <li class="sorting-list">
+                  <a class="sorting-link" href="">По названию</a>
+                </li>
+                <li class="sorting-list">
+                  <a class="sorting-link sorting-up" href="" aria-label="По возрастанию"></a>
+                </li>
+                <li class="sorting-list">
+                  <a class="sorting-link sorting-down" href="" aria-label="По убыванию"></a>
+                </li>
+              </ul>
+            </div>
+            <ul class="services">
+              <li class="services-list">
+                <article class="services-item">
+                  <div class="points">
+                  </div>
+                  <div class="picture">
+                    <img class="picture-list" src="img/img-sedona.jpg" alt="sedona">
+                  </div>
+                  <section class="information">
+                    <h2 class="head"><a href="">Sedona</a></h2>
+                    <p class="text">Информационный сайт для туристов</p>
+                    <a class="link" href="#">9 900 руб.</a>
+                  </section>
+                </article>
+              </li>
+              <li class="services-list">
+                <article class="services-item">
+                  <div class="points">
+                  </div>
+                  <div class="picture">
+                    <img class="picture-list" src="img/img-pink.jpg" alt="pink app">
+                  </div>
+                  <section class="information">
+                    <h2><a href="">Pink App</a></h2>
+                    <p class="text">Продуктовый лендинг приложения для iOS и Android</p>
+                    <a class="link" href="#">9 900 руб.</a>
+                  </section>
+                </article>
+              </li>
+              <li class="services-list">
+                <article class="services-item">
+                  <div class="points">
+                  </div>
+                  <div class="picture">
+                    <img class="picture-list" src="img/img-barbershop.jpg" alt="barbershop">
+                  </div>
+                  <section class="information">
+                    <h2 class="head"><a href="">Barbershop</a></h2>
+                    <p class="text">Сайт салоны красоты. Для мужчин, да.</p>
+                    <a class="link" href="#">9 900 руб.</a>
+                  </section>
+                </article>
+              </li>
+              <li class="services-list">
+                <article class="services-item">
+                  <div class="points">
+                  </div>
+                  <div class="picture">
+                    <img class="picture-list" src="img/img-mishka.jpg" alt="mishka">
+                  </div>
+                  <section class="information">
+                    <h2 class="head"><a href="">MISHKA</a></h2>
+                    <p class="text">Интернет-магазин вязаных игрушек</p>
+                    <a class="link" href="#">9 900 руб.</a>
+                  </section>
+                </article>
+              </li>
+              <li class="services-list">
+                <article class="services-item">
+                  <div class="points">
+                  </div>
+                  <div class="picture">
+                    <img class="picture-list" src="img/img-aplus.jpg" alt="aplus">
+                  </div>
+                  <section class="information">
+                    <h2 class="head"><a href="">A Plus</a></h2>
+                    <p class="text">Лендинг курсов повышения квалификации</p>
+                    <a class="link" href="#">9 900 руб.</a>
+                  </section>
+                </article>
+              </li>
+              <li class="services-list">
+                <article class="services-item">
+                  <div class="points">
+                  </div>
+                  <div class="picture">
+                    <img class="picture-list" src="img/img-kvast.jpg" alt="kvast">
+                  </div>
+                  <section class="information">
+                    <h2 class="head"><a href="">КВАСТ</a></h2>
+                    <p class="text">Промо-сайт производителя крафтового кваса</p>
+                    <a class="link" href="#">9 900 руб.</a>
+                  </section>
+                </article>
+             </li>
+            </ul>
           </div>
-        </aside>
-        <div class="container-item">
-          <p class="text">Сортировать:</p>
-          <ul class="sorting">
-            <li class="sorting-list">
-              <a class="sorting-link" href="">По цене</a>
-            </li>
-            <li class="sorting-list">
-              <a class="sorting-link" href="">По типу</a>
-            </li>
-            <li class="sorting-list">
-              <a class="sorting-link" href="">По названию</a>
-            </li>
-            <li class="sorting-list">
-              <a class="sorting-link sorting-up" href="" aria-label="По возрастанию"></a>
-            </li>
-            <li class="sorting-list">
-              <a class="sorting-link sorting-down" href="" aria-label="По убыванию"></a>
-            </li>
-          </ul>
-          <ul class="services">
-            <li class="services-list">
-              <article class="services-item">
-                <div class="points">
-                </div>
-                <div class="picture">
-                  <img class="picture-list" src="img/img-sedona.jpg" alt="sedona">
-                </div>
-                <section class="information">
-                  <h2 class="head"><a href="">Sedona</a></h2>
-                  <p class="text">Информационный сайт для туристов</p>
-                  <a class="link" href="#">9 900 руб.</a>
-                </section>
-              </article>
-            </li>
-            <li class="services-list">
-              <article class="services-item">
-                <div class="points">
-                </div>
-                <div class="picture">
-                  <img class="picture-list" src="img/img-pink.jpg" alt="pink app">
-                </div>
-                <section class="information">
-                  <h2><a href="">Pink App</a></h2>
-                  <p class="text">Продуктовый лендинг приложения для iOS и Android</p>
-                  <a class="link" href="#">9 900 руб.</a>
-                </section>
-              </article>
-            </li>
-            <li class="services-list">
-              <article class="services-item">
-                <div class="points">
-                </div>
-                <div class="picture">
-                  <img class="picture-list" src="img/img-barbershop.jpg" alt="barbershop">
-                </div>
-                <section class="information">
-                  <h2 class="head"><a href="">Barbershop</a></h2>
-                  <p class="text">Сайт салоны красоты. Для мужчин, да.</p>
-                  <a class="link" href="#">9 900 руб.</a>
-                </section>
-              </article>
-            </li>
-            <li class="services-list">
-              <article class="services-item">
-                <div class="points">
-                </div>
-                <div class="picture">
-                  <img class="picture-list" src="img/img-mishka.jpg" alt="mishka">
-                </div>
-                <section class="information">
-                  <h2 class="head"><a href="">MISHKA</a></h2>
-                  <p class="text">Интернет-магазин вязаных игрушек</p>
-                  <a class="link" href="#">9 900 руб.</a>
-                </section>
-              </article>
-            </li>
-            <li class="services-list">
-              <article class="services-item">
-                <div class="points">
-                </div>
-                <div class="picture">
-                  <img class="picture-list" src="img/img-aplus.jpg" alt="aplus">
-                </div>
-                <section class="information">
-                  <h2 class="head"><a href="">A Plus</a></h2>
-                  <p class="text">Лендинг курсов повышения квалификации</p>
-                  <a class="link" href="#">9 900 руб.</a>
-                </section>
-              </article>
-            </li>
-            <li class="services-list">
-              <article class="services-item">
-                <div class="points">
-                </div>
-                <div class="picture">
-                  <img class="picture-list" src="img/img-kvast.jpg" alt="kvast">
-                </div>
-                <section class="information">
-                  <h2 class="head"><a href="">КВАСТ</a></h2>
-                  <p class="text">Промо-сайт производителя крафтового кваса</p>
-                  <a class="link" href="#">9 900 руб.</a>
-                </section>
-              </article>
-           </li>
-          </ul>
         </div>
         <div class="pages-list">
           <a class="pages-link one" href="">1</a>
