Сетка личного проекта на флексах

--- a/index.html
+++ b/index.html
@@ -145,9 +145,11 @@
       </section>
     </main>
     <footer class="main-footer">
-      <div class="container">
-        <b class="tagline benefit">Давайте дружить, это выгодно!</b>
-        <p class="text">Скидка 10% для друзей из социальных сетей.</p>
+      <div class="container container-footer">
+        <div class="exhortation">
+          <b class="tagline benefit">Давайте дружить, это выгодно!</b>
+          <p class="text">Скидка 10% для друзей из социальных сетей.</p>
+        </div>
         <ul class="social-list">
           <li class="social-item">
             <a class="social social-vk" href="#" aria-label="Мы в Вконтантакте"></a>
