Сетка личного проекта на флексах

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       <div class="container">
         <nav class="main-navigation" aria-label="Меню сайта">
           <a class="logo">
-            <img src="img/nerds-logo.svg" alt="логотип">
+            <img src="img/nerds-logo.svg" alt="логотип" width="160" height="65">
           </a>
           <ul class="menu-list">
             <li class="menu-item" >
@@ -44,21 +44,27 @@
           </div>
           <ul class="carousel">
             <li class="carousel-item">
-              <b class="tagline">Долго, дорого, скорпулезно</b>
-              <p class="text">Математически выверенный дизайн для вашего сайта или мобильного приложения.</p>
-              <a class="link link-list" href="#">Узнать больше</a>
+              <div class="container-carousel-item">
+                <b class="tagline">Долго, дорого, скорпулезно</b>
+                <p class="text">Математически выверенный дизайн для вашего сайта или мобильного приложения.</p>
+                <a class="link link-list" href="#">Узнать больше</a>
+              </div>
               <div class="red"></div>
             </li>
             <li class="carousel-item">
-              <b class="tagline">Любим математикукак никто другой</b>
-              <p class="text">Никакого креатива, только математические формулы для расчета идеальных пропорций.</p>
-              <a class="link link-list" href="#">Узнать больше</a>
+              <div class="container-carousel-item">
+                <b class="tagline">Любим математикукак никто другой</b>
+                <p class="text">Никакого креатива, только математические формулы для расчета идеальных пропорций.</p>
+                <a class="link link-list" href="#">Узнать больше</a>
+              </div>
               <div class="green"></div>
             </li>
             <li class="carousel-item">
-              <b class="tagline">Только ночь, только хардкор</b>
-              <p class="text">Работать днем, как все? Мы против этого. Ближе к полуночи работа только начинается.</p>
-              <a class="link link-list" href="#">Узнать больше</a>
+              <div class="container-carousel-item">
+                <b class="tagline">Только ночь, только хардкор</b>
+                <p class="text">Работать днем, как все? Мы против этого. Ближе к полуночи работа только начинается.</p>
+                <a class="link link-list" href="#">Узнать больше</a>
+              </div>
               <div class="blue"></div>
             </li>
           </ul>
